--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,8 +4,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 <footer>
-<div class="container"><div class="col-sm-6 col-sm-offset-3" >
-    &copy2015 - Yuelin Wang - COMP2068
+    <div class="container">
+        <div class="col-sm-6 col-sm-offset-5 fixed-bottom">
+            &copy2015 - Yuelin Wang - COMP2068
+        </div>
     </div>
-</div>
 </footer>
