--- a/views/service.ejs
+++ b/views/service.ejs
@@ -1,3 +1,16 @@
 ﻿<%- include partials/header.ejs %>
-<h1><%= title %></h1>
+
+<div class="container">
+
+    <h2><%= title %></h2>
+
+    <ul class="list-group">
+        <li class="list-group-item btn-info">Android Development</li>
+        <li class="list-group-item btn-default">J2EE Development</li>
+        <li class="list-group-item btn-info">Game Design</li>
+        <li class="list-group-item btn-default">Game Test</li>
+    </ul>
+
+
+</div>
 <%- include partials/footer.ejs %>
