--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -1,5 +1,5 @@
-﻿<%- include partials/header.ejs %>
-
+<%- include partials/header.ejs %>
+<h1>this is contact</h1>
 <div class="container">
     <hr class="featurette-divider">
     <div class="jumbotron ">
